--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <div class="container">
         <h1 class="text-center my-4">ToDo Listesi</h1>
 
-        <!-- filtreleme -->
+        <!-- sayfalar -->
         <div class="filter-btns d-flex justify-content-center mb-3">
             <a href="/" class="btn btn-secondary">Tüm Görevler</a>
             <a href="/tasks/pending" class="btn btn-primary">Yapılacaklar</a>
